...
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/bg_yellow"
...
            android:text="Tags"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"></TextView>


        <TextView
            android:id="@+id/total_value_amount"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>
...
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <!-- Add Tag Button -->
        <Button
            android:id="@+id/mutliple_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Add Tag" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
...
