...
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="Estimated Value (CAD$):"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/show_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="Item Value" />

...
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back" />

        <Space
            android:layout_width="0dp"
...
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Save" />

        <Space
            android:layout_width="0dp"
...
